# glue_gun

./: .gitmodules  Cargo.toml  flake.nix  glue_gun.code-workspace
src/: build.rs  clean.rs  lib.rs  main.rs  metadata.rs  run.rs  sym.rs  watch.rs
tests/: example_test.rs
